--- a/app/src/main/res/layout/fragment_catagories_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_catagories_bottom_sheet.xml
@@ -53,7 +53,7 @@
     <ScrollView
         android:id="@+id/scroll_view"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:scrollbars="none"
         app:layout_constraintEnd_toEndOf="parent"
@@ -126,6 +126,7 @@
                 android:fontFamily="@font/raleway_regular"
                 android:layout_marginTop="24dp"
                 android:text="Sugar:"
+                android:visibility="gone"
                 android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/chip_group_size" />
@@ -137,6 +138,7 @@
                 android:layout_marginTop="10dp"
                 android:orientation="horizontal"
                 android:gravity="center"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_sugar">
@@ -187,6 +189,7 @@
                 android:layout_marginTop="24dp"
                 android:fontFamily="@font/raleway_regular"
                 android:text="Ice:"
+                android:visibility="gone"
                 android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/radio_group_sugar" />
@@ -198,6 +201,7 @@
                 android:layout_marginTop="10dp"
                 android:orientation="horizontal"
                 android:gravity="center"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_ice">
@@ -247,6 +251,7 @@
                 android:layout_marginTop="24dp"
                 android:fontFamily="@font/raleway_regular"
                 android:text="Topping:"
+                android:visibility="gone"
                 android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/radio_group_ice" />
@@ -259,6 +264,7 @@
                 android:fontFamily="@font/raleway_regular"
                 android:minWidth="40dp"
                 android:minHeight="40dp"
+                android:visibility="gone"
                 android:layout_marginTop="12dp"
                 android:text="Bubble"
                 android:textColor="@color/text_color"
@@ -272,6 +278,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/montserrat_regular"
                 android:text="10.000 VND"
+                android:visibility="gone"
                 android:textColor="@color/text_color"
                 android:textSize="14sp"
                 android:layout_marginTop="12dp"
@@ -286,6 +293,7 @@
                 android:fontFamily="@font/raleway_regular"
                 android:minWidth="40dp"
                 android:minHeight="40dp"
+                android:visibility="gone"
                 android:layout_marginTop="12dp"
                 android:text="Cheese"
                 android:textColor="@color/text_color"
@@ -299,6 +307,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/montserrat_regular"
                 android:text="15.000 VND"
+                android:visibility="gone"
                 android:textColor="@color/text_color"
                 android:textSize="14sp"
                 android:layout_marginTop="12dp"
@@ -312,6 +321,7 @@
                 android:buttonTint="@color/text_color"
                 android:fontFamily="@font/raleway_regular"
                 android:minWidth="40dp"
+                android:visibility="gone"
                 android:minHeight="40dp"
                 android:layout_marginTop="12dp"
                 android:text="Peach"
@@ -326,6 +336,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/montserrat_regular"
                 android:text="10.000 VND"
+                android:visibility="gone"
                 android:textColor="@color/text_color"
                 android:textSize="14sp"
                 android:layout_marginTop="12dp"
@@ -340,6 +351,7 @@
                 android:fontFamily="@font/raleway_regular"
                 android:minWidth="40dp"
                 android:minHeight="40dp"
+                android:visibility="gone"
                 android:layout_marginTop="12dp"
                 android:text="Crunch"
                 android:textColor="@color/text_color"
@@ -353,6 +365,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/montserrat_regular"
                 android:text="15.000 VND"
+                android:visibility="gone"
                 android:textColor="@color/text_color"
                 android:textSize="14sp"
                 android:layout_marginTop="12dp"
@@ -369,6 +382,7 @@
                 android:minHeight="40dp"
                 android:layout_marginTop="12dp"
                 android:text="Lychee"
+                android:visibility="gone"
                 android:textColor="@color/text_color"
                 android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -382,6 +396,7 @@
                 android:text="10.000 VND"
                 android:textColor="@color/text_color"
                 android:textSize="14sp"
+                android:visibility="gone"
                 android:layout_marginTop="12dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/lychee" />
