--- a/app/src/main/res/layout/toobar_home.xml
+++ b/app/src/main/res/layout/toobar_home.xml
@@ -12,21 +12,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/carViewAvatar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:cardCornerRadius="90dp">
 
-            <ImageView
+            <com.makeramen.roundedimageview.RoundedImageView
                 android:id="@+id/imgAvatar"
                 android:layout_width="46dp"
                 android:layout_height="46dp"
-                android:background="@drawable/circle_shape"
                 android:src="@drawable/avatar"
+                app:riv_corner_radius="90dp"
                 tools:ignore="ContentDescription" />
 
-        </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/tvName"
@@ -35,7 +29,7 @@
             android:text="Hi, Latte!"
             android:textSize="16sp"
             android:textColor="@color/grey_primary_variant"
-            android:layout_toEndOf="@id/carViewAvatar"
+            android:layout_toEndOf="@id/imgAvatar"
             android:layout_marginStart="12dp"
             android:layout_marginTop="5dp"
             android:fontFamily="@font/raleway_regular"/>
@@ -47,7 +41,7 @@
             android:layout_below="@id/tvName"
             android:layout_marginStart="12dp"
             android:layout_marginTop="4dp"
-            android:layout_toEndOf="@id/carViewAvatar"
+            android:layout_toEndOf="@id/imgAvatar"
             android:fontFamily="@font/montserrat_regular"
             android:text="3000"
             android:textSize="11sp" />
