--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -112,4 +112,8 @@
         <item name="fontFamily">@font/raleway_regular</item>
         <item name="android:fontFamily">@font/raleway_regular</item>
     </style>
+
+    <style name="CornerSize50Percent" parent="">
+        <item name="cornerSize">50%</item>
+    </style>
 </resources>
