--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -142,4 +142,8 @@
         <item name="android:windowBackground">@drawable/splashbackground</item>
         <item name="android:windowFullscreen">true</item>
     </style>
+
+    <style name="CornerSize50Percent" parent="">
+        <item name="cornerSize">50%</item>
+    </style>
 </resources>
