--- a/app/src/main/res/layout/fragment_profile_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_profile_bottom_sheet.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    android:id="@+id/profile_image_bottom_sheet_action"
     tools:context=".ui.fragments.profile_bottom_sheet.ProfileBottomSheetFragment">
 
 
@@ -25,11 +26,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="18dp"
+        android:background="@null"
+        android:src="@drawable/ic_clear"
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView2"
-        android:background="@null"
-        android:src="@drawable/ic_clear">
+        app:layout_constraintTop_toTopOf="@+id/textView2">
 
     </androidx.appcompat.widget.AppCompatImageButton>
 
@@ -43,77 +44,119 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_choose_gallery"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="18sp"
-        android:layout_marginTop="36dp"
-        android:background="@null"
-        android:drawableStart="@drawable/ic_gallery"
-        android:drawablePadding="10dp"
-        android:paddingStart="0dp"
-        android:paddingEnd="0dp"
-        android:fontFamily="@font/raleway_medium"
-        android:paddingHorizontal="21dp"
-        android:paddingVertical="16dp"
-        android:text="@string/choose_from_gallery"
-        android:textAlignment="textStart"
-        android:textAllCaps="false"
-        android:textColor="@color/text_color"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view" />
-
-    <View
-        android:id="@+id/view1"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/action_layout"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_margin="18dp"
-        android:background="@color/text_color"
+        android:layout_height="wrap_content"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_choose_gallery" />
+        app:layout_constraintTop_toBottomOf="@+id/view">
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_take_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="18sp"
-        android:layout_marginTop="18dp"
-        android:background="@null"
-        android:drawableStart="@drawable/ic_camera"
-        android:drawablePadding="10dp"
-        android:fontFamily="@font/raleway_medium"
-        android:paddingHorizontal="21dp"
-        android:paddingVertical="16dp"
-        android:paddingStart="0dp"
-        android:paddingEnd="0dp"
-        android:text="@string/camera"
-        android:textAlignment="textStart"
-        android:textAllCaps="false"
-        android:textColor="@color/text_color"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view1" />
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_choose_gallery"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="18sp"
+            android:layout_marginTop="15dp"
+            android:background="@null"
+            android:drawableStart="@drawable/ic_gallery"
+            android:drawablePadding="10dp"
+            android:fontFamily="@font/raleway_medium"
+            android:paddingHorizontal="21dp"
+            android:paddingVertical="16dp"
+            android:paddingStart="0dp"
+            android:paddingEnd="0dp"
+            android:text="@string/choose_from_gallery"
+            android:textAlignment="textStart"
+            android:textAllCaps="false"
+            android:textColor="@color/text_color"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_cancel"
+        <View
+            android:id="@+id/view1"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_margin="18dp"
+            android:background="@color/text_color"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btn_choose_gallery" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_take_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="18sp"
+            android:layout_marginTop="18dp"
+            android:background="@null"
+            android:drawableStart="@drawable/ic_camera"
+            android:drawablePadding="10dp"
+            android:fontFamily="@font/raleway_medium"
+            android:paddingHorizontal="21dp"
+            android:paddingVertical="16dp"
+            android:paddingStart="0dp"
+            android:paddingEnd="0dp"
+            android:text="@string/camera"
+            android:textAlignment="textStart"
+            android:textAllCaps="false"
+            android:textColor="@color/text_color"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/view1" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_cancel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:background="@drawable/profile_button_custom_bg"
+            android:backgroundTint="@color/text_color"
+            android:fontFamily="@font/raleway_medium"
+            android:text="@string/cancel"
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textColor="@color/button_grey_color"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btn_take_image" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/image_preview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/profile_button_custom_bg"
-        android:backgroundTint="@color/text_color"
-        android:fontFamily="@font/raleway_medium"
-        android:text="@string/cancel"
-        android:layout_margin="20dp"
-        android:textAlignment="center"
-        android:textAllCaps="true"
-        android:textColor="@color/button_grey_color"
-        android:textSize="14sp"
-        android:textStyle="bold"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_take_image" />
+        app:layout_constraintTop_toBottomOf="@+id/view">
+
+        <androidx.camera.view.PreviewView
+            android:id="@+id/viewFinder"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="@+id/image_preview"
+            app:layout_constraintEnd_toEndOf="@+id/image_preview"
+            app:layout_constraintStart_toStartOf="@+id/image_preview"
+            app:layout_constraintTop_toTopOf="@+id/image_preview" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/image_capture_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|center_horizontal"
+            android:layout_marginBottom="15dp"
+            android:background="@drawable/rounded_shape"
+            android:elevation="2dp"
+            android:padding="15dp"
+            android:text="Take Photo"
+            android:textColor="@color/text_color" />
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
