--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -55,8 +55,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/SmallNumber"
-            android:text="90.000 VND"
-            tools:ignore="HardcodedText" />
+            android:text="@string/product_price" />
 
     </LinearLayout>
 
@@ -79,6 +78,7 @@
             android:orientation="horizontal">
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/btn_decrease_quantity"
                 android:layout_width="18dp"
                 android:layout_height="18dp"
                 app:cardCornerRadius="3dp"
@@ -94,13 +94,14 @@
 
             <TextView
                 android:id="@+id/tv_amount"
-                android:layout_width="wrap_content"
+                android:layout_width="22dp"
                 android:layout_height="wrap_content"
                 style="@style/SmallNumber"
                 android:text="1"
-                android:layout_marginHorizontal="6dp"/>
+                android:textAlignment="center"/>
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/btn_increase_quantity"
                 android:layout_width="18dp"
                 android:layout_height="18dp"
                 app:cardCornerRadius="3dp"
