--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -135,6 +135,15 @@
                 app:cardCornerRadius="9dp"
                 android:backgroundTint="#4B413A">
 
+                <com.google.android.material.progressindicator.CircularProgressIndicator
+                    android:id="@+id/progress_cart"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:indeterminate="true"
+                    android:elevation="10dp"
+                    app:indicatorColor="@color/grey_primary_variant" />
+
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_product"
                     android:layout_marginHorizontal="18dp"
