--- a/app/src/main/res/layout/item_checkout.xml
+++ b/app/src/main/res/layout/item_checkout.xml
@@ -14,6 +14,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
+            android:id="@+id/iv_thumbnail"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:src="@drawable/a"
@@ -30,21 +31,31 @@
         android:layout_marginStart="12dp">
 
         <TextView
+            android:id="@+id/tv_product_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/RegularText2"
+            android:maxWidth="130dp"
+            android:singleLine="true"
+            android:ellipsize="marquee"
+            android:marqueeRepeatLimit="marquee_forever"
             android:textColor="@color/text_color_2"
             android:text="Black tea"/>
 
         <TextView
+            android:id="@+id/tv_product_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:maxWidth="130dp"
+            android:maxLines="1"
+            android:ellipsize="end"
             style="@style/SmallText"
             android:textColor="@color/text_color"
             android:text="With milk"
             android:layout_marginTop="2dp"/>
 
         <TextView
+            android:id="@+id/tv_quantity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/SmallText"
@@ -54,6 +65,7 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/tv_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="@style/RegularNumber2"
