--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -116,13 +116,13 @@
         android:layout_below="@+id/tvForgotPassword"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="32dp"
-        android:text="SIGN IN"
-        android:fontFamily="@font/raleway_regular"
-        android:textSize="16sp"
         android:width="150dp"
         android:height="40dp"
+        android:background="@drawable/rounded_shape"
+        android:fontFamily="@font/raleway_regular"
+        android:text="SIGN IN"
         android:textColor="#ffffff"
-        android:background="@drawable/rounded_shape" />
+        android:textSize="16sp" />
 
     <TextView
         android:id="@+id/tvOr"
