dÃefault address function

--- a/app/src/main/res/layout/address_book_item_layout.xml
+++ b/app/src/main/res/layout/address_book_item_layout.xml
@@ -13,6 +13,7 @@
         android:layout_marginBottom="18dp"
         android:visibility="visible"
         app:cardCornerRadius="9dp"
+        app:strokeColor="@color/text_color_2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,7 +42,7 @@
                 android:id="@+id/btn_delete"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="4dp"
+                android:layout_marginEnd="18dp"
                 android:background="@null"
                 android:contentDescription="@string/delete"
                 android:src="@drawable/ic_trash"
