add address api

--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -83,13 +83,24 @@
                 app:cardCornerRadius="9dp"
                 android:backgroundTint="#4B413A">
 
+                <com.google.android.material.progressindicator.CircularProgressIndicator
+                    android:id="@+id/progress_address"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:indeterminate="true"
+                    android:elevation="10dp"
+                    app:indicatorColor="@color/grey_primary_variant" />
+
                 <LinearLayout
+                    android:id="@+id/address_container"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:padding="18dp"
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/tv_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         style="@style/RegularText2"
@@ -98,6 +109,7 @@
                         android:layout_marginBottom="5dp"/>
 
                     <TextView
+                        android:id="@+id/tv_phone_number"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         style="@style/RegularNumber2"
@@ -106,6 +118,7 @@
                         android:layout_marginBottom="5dp"/>
 
                     <TextView
+                        android:id="@+id/tv_address"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         style="@style/RegularText2"
