fix ui notification

--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -37,8 +37,7 @@
         app:tabIndicatorColor="@color/grey_primary_variant"
         android:layout_marginTop="25dp"
         app:tabPaddingStart="10dp"
-        app:tabMinWidth="10dp"
-        app:tabContentStart="30dp"
+        app:tabIndicatorFullWidth="false"
         app:tabTextColor="@color/text_color"
         app:tabTextAppearance="@style/MyCustomTabTextAppearance">
 
