--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -116,4 +116,9 @@
     <style name="CornerSize50Percent" parent="">
         <item name="cornerSize">50%</item>
     </style>
+
+    <style name="TabText" parent="@android:style/TextAppearance.Widget.TabWidget">
+        <item name="fontFamily">@font/raleway_regular</item>
+        <item name="android:textSize">18sp</item>
+    </style>
 </resources>
