working on checkout

--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -330,6 +330,7 @@
                 android:text="Total: " />
 
             <TextView
+                android:id="@+id/tv_total_price"
                 style="@style/RegularNumber"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
