--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -19,7 +19,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:gravity="center_vertical">
+            android:gravity="center_vertical"
+            android:background="@color/grey_primary">
 
             <ImageButton
                 android:id="@+id/btn_nav_back"
@@ -351,6 +352,7 @@
                         android:text="[-200]"/>
 
                     <androidx.appcompat.widget.SwitchCompat
+                        android:id="@+id/sw_use_jolie_coin"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:checked="false"/>
@@ -384,117 +386,117 @@
 
                     <TextView
                         android:id="@+id/tv_subtotal_label"
+                        style="@style/SmallText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        style="@style/SmallText"
+                        android:text="@string/subtotal"
                         android:textSize="14sp"
-                        app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        android:text="@string/subtotal"/>
+                        app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
                         android:id="@+id/tv_subtotal_detail"
+                        style="@style/SmallNumber"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        android:textSize="14sp"
                         android:text="180.000 VND"
-                        style="@style/SmallNumber"/>
+                        android:textSize="14sp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
                         android:id="@+id/tv_shipping_fee_label"
+                        style="@style/SmallText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        style="@style/SmallText"
-                        android:textSize="14sp"
                         android:layout_marginTop="12dp"
-                        app:layout_constraintTop_toBottomOf="@id/tv_subtotal_label"
+                        android:text="@string/shipping_fee"
+                        android:textSize="14sp"
                         app:layout_constraintStart_toStartOf="parent"
-                        android:text="@string/shipping_fee"/>
+                        app:layout_constraintTop_toBottomOf="@id/tv_subtotal_label" />
 
                     <TextView
                         android:id="@+id/tv_shipping_fee_detail"
+                        style="@style/SmallNumber"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        app:layout_constraintTop_toBottomOf="@id/tv_subtotal_detail"
-                        app:layout_constraintEnd_toEndOf="parent"
                         android:layout_marginTop="12dp"
-                        android:textSize="14sp"
                         android:text="0 VND"
-                        style="@style/SmallNumber"/>
+                        android:textSize="14sp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/tv_subtotal_detail" />
 
                     <TextView
                         android:id="@+id/tv_discount_label"
+                        style="@style/SmallText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        style="@style/SmallText"
-                        android:textSize="14sp"
                         android:layout_marginTop="12dp"
-                        app:layout_constraintTop_toBottomOf="@id/tv_shipping_fee_label"
+                        android:text="@string/discount"
+                        android:textSize="14sp"
                         app:layout_constraintStart_toStartOf="parent"
-                        android:text="@string/discount"/>
+                        app:layout_constraintTop_toBottomOf="@id/tv_shipping_fee_label" />
 
                     <TextView
                         android:id="@+id/tv_discount_detail"
+                        style="@style/SmallNumber"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        app:layout_constraintTop_toBottomOf="@id/tv_shipping_fee_detail"
-                        app:layout_constraintEnd_toEndOf="parent"
                         android:layout_marginTop="12dp"
-                        android:textSize="14sp"
                         android:text="-30.000 VND"
-                        style="@style/SmallNumber"/>
+                        android:textSize="14sp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/tv_shipping_fee_detail" />
 
                     <TextView
                         android:id="@+id/tv_jolie_coin_label"
+                        style="@style/SmallText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        style="@style/SmallText"
-                        android:textSize="14sp"
                         android:layout_marginTop="12dp"
-                        app:layout_constraintTop_toBottomOf="@id/tv_discount_label"
+                        android:text="@string/jolie_coin"
+                        android:textSize="14sp"
                         app:layout_constraintStart_toStartOf="parent"
-                        android:text="@string/jolie_coin"/>
+                        app:layout_constraintTop_toBottomOf="@id/tv_discount_label" />
 
                     <TextView
                         android:id="@+id/tv_jolie_coin_detail"
+                        style="@style/SmallNumber"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        app:layout_constraintTop_toBottomOf="@id/tv_discount_detail"
-                        app:layout_constraintEnd_toEndOf="parent"
                         android:layout_marginTop="12dp"
-                        android:textSize="14sp"
                         android:text="-200 VND"
-                        style="@style/SmallNumber"/>
+                        android:textSize="14sp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/tv_discount_detail" />
 
                     <View
                         android:id="@+id/divider"
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
-                        android:background="@color/text_color"
                         android:layout_marginTop="12dp"
-                        app:layout_constraintTop_toBottomOf="@id/tv_jolie_coin_label"/>
+                        android:background="@color/text_color"
+                        app:layout_constraintTop_toBottomOf="@id/tv_jolie_coin_label" />
 
                     <TextView
                         android:id="@+id/tv_total_label"
+                        style="@style/RegularText2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        style="@style/RegularText2"
                         android:layout_marginTop="12dp"
-                        app:layout_constraintTop_toBottomOf="@id/divider"
+                        android:text="@string/total"
                         app:layout_constraintStart_toStartOf="parent"
-                        android:text="@string/total"/>
+                        app:layout_constraintTop_toBottomOf="@id/divider" />
 
                     <TextView
                         android:id="@+id/tv_total_detail"
+                        style="@style/RegularNumber2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        app:layout_constraintTop_toBottomOf="@id/divider"
-                        app:layout_constraintEnd_toEndOf="parent"
                         android:layout_marginTop="12dp"
                         android:text="150.000 VND"
-                        style="@style/RegularNumber2"/>
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/divider" />
 
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -519,6 +521,7 @@
                 app:layout_constraintTop_toBottomOf="@id/summary_container"
                 app:layout_constraintEnd_toStartOf="@id/btn_order"
                 android:text="@string/cancel"
+                android:stateListAnimator="@null"
                 android:textAllCaps="false"
                 android:layout_marginTop="36dp"
                 android:textColor="@color/grey_primary_variant"/>
