--- a/app/src/main/res/layout/order_history_item_layout.xml
+++ b/app/src/main/res/layout/order_history_item_layout.xml
@@ -81,7 +81,7 @@
                 android:id="@+id/order_item_body"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:visibility="gone"
+                android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -214,7 +214,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:fontFamily="@font/montserrat_regular"
-                    android:text="0 VND"
+                    android:text="@string/product_price"
                     android:textAlignment="textEnd"
                     android:textColor="@color/grey_secondary"
                     android:textSize="14sp"
@@ -246,7 +246,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:fontFamily="@font/montserrat_regular"
-                    android:text="180.000 VND"
+                    android:text="@string/product_price"
                     android:textAlignment="textEnd"
                     android:textColor="@color/title_text_color"
                     android:textSize="14sp"
