--- a/app/src/main/res/layout/order_item_in_bill_layout.xml
+++ b/app/src/main/res/layout/order_item_in_bill_layout.xml
@@ -104,7 +104,7 @@
                 android:layout_weight="3"
                 android:fontFamily="@font/montserrat_regular"
                 android:gravity="center_vertical"
-                android:text="90.000 VND"
+                android:text="@string/product_price"
                 android:textColor="@color/text_color"
                 android:textAlignment="textEnd"
                 android:textSize="11sp">
