--- a/app/src/main/res/layout/order_history_item_layout.xml
+++ b/app/src/main/res/layout/order_history_item_layout.xml
@@ -43,7 +43,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="11dp"
                 android:fontFamily="@font/montserrat_regular"
-                android:text="5 items"
+                android:text="@string/product_quantity"
                 android:textColor="@color/grey_secondary"
                 android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -56,7 +56,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/montserrat_regular"
-                android:text="90.000 VND"
+                android:text="@string/product_price"
                 android:textColor="@color/grey_secondary"
                 android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_order_number_item"
@@ -81,7 +81,7 @@
                 android:id="@+id/order_item_body"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:visibility="visible"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
